--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,8 +4,12 @@
   android:versionCode="1"
   android:versionName="1.0">
 
-  <uses-sdk android:minSdkVersion="8" />
-  <application android:label="@string/app_name">
+  <uses-sdk
+    android:minSdkVersion="8"
+    android:targetSdkVersion="16" />
+  <application
+    android:label="@string/app_name"
+    android:allowBackup="true">
     <activity
       android:name="MainActivity"
       android:label="@string/app_name">
