--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,21 +2,24 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.realbeauty.allie"
   android:versionCode="1"
-  android:versionName="1.0">
+  android:versionName="1.0" >
 
   <uses-sdk
     android:minSdkVersion="8"
-    android:targetSdkVersion="16" />
+    android:targetSdkVersion="17" />
+
   <application
-    android:label="@string/app_name"
-    android:allowBackup="true">
+    android:allowBackup="true"
+    android:label="@string/app_name" >
     <activity
-      android:name="MainActivity"
-      android:label="@string/app_name">
+      android:name="com.realbeauty.allie.ui.main.MainActivity"
+      android:label="@string/app_name" >
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
+
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
   </application>
-</manifest> 
+
+</manifest>
