added new fonts and new views for tablets.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,6 +9,7 @@
     android:targetSdkVersion="17" />
 
   <application
+    android:name="com.realbeauty.allie.ui.BlundellApplication"
     android:allowBackup="true"
     android:label="@string/app_name"
     android:theme="@style/Theme.Real_beauty" >
