added new launcher icon

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,6 +11,7 @@
   <application
     android:name="com.realbeauty.allie.ui.BlundellApplication"
     android:allowBackup="true"
+    android:icon="@drawable/ic_launcher"
     android:label="@string/app_name"
     android:theme="@style/Theme.Real_beauty" >
     <activity
